[desktop] Cover macOS chooser-view icon path